crates/pyfmt_python_formatter/src/comments/snapshots/pyfmt_python_formatter__comments__tests__empty_file.snap
---
source: crates/pyfmt_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{}
