crates/pyfmt_python_formatter/src/comments/snapshots/pyfmt_python_formatter__comments__tests__if_elif_if_else_comments.snap
---
source: crates/pyfmt_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: StmtIf,
        range: 37..60,
        source: `if x < 10:⏎`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# `elif` trailing comment",
                position: OwnLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: ElifElseClause,
        range: 114..128,
        source: `else:⏎`,
    }: {
        "leading": [
            SourceComment {
                text: "# Leading else comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
