crates/pyfmt_python_formatter/src/comments/snapshots/pyfmt_python_formatter__comments__tests__non_positional_arguments_slash_on_same_line.snap
---
source: crates/pyfmt_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: Parameters,
        range: 9..96,
        source: `(a=10,/, # trailing positio...t comment.⏎`,
    }: {
        "leading": [],
        "dangling": [
            SourceComment {
                text: "# trailing positional argument comment.",
                position: EndOfLine,
                formatted: false,
            },
        ],
        "trailing": [],
    },
    Node {
        kind: ParameterWithDefault,
        range: 90..94,
        source: `b=20`,
    }: {
        "leading": [
            SourceComment {
                text: "# leading comment for b",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
