crates/pyfmt_python_formatter/src/comments/snapshots/pyfmt_python_formatter__comments__tests__non_positional_arguments_with_defaults.snap
---
source: crates/pyfmt_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: Parameters,
        range: 9..179,
        source: `(⏎`,
    }: {
        "leading": [],
        "dangling": [
            SourceComment {
                text: "# Positional arguments only after here",
                position: OwnLine,
                formatted: false,
            },
            SourceComment {
                text: "# trailing positional argument comment.",
                position: EndOfLine,
                formatted: false,
            },
        ],
        "trailing": [],
    },
    Node {
        kind: ParameterWithDefault,
        range: 15..19,
        source: `a=10`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# trailing positional comment",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: ParameterWithDefault,
        range: 173..177,
        source: `b=20`,
    }: {
        "leading": [
            SourceComment {
                text: "# leading comment for b",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
